# homelab

./: .gitignore  .sops.yaml  AGENTS.md  README.md  configuration.nix  darwin-configuration.nix  deploy.nix  fabfile.py  flake.nix  home.nix  pyproject.toml  secrets.yaml  shell.nix
.claude/skills/deploy/: SKILL.md
.claude/skills/update/: SKILL.md
home/: common.nix  default.nix  git.nix  linux.nix  sci.nix  shell.nix  starship.nix
hosts/: alpha.nix  beta.nix  gamma.nix  misaki.nix  scilo.nix  scipi3.nix  scipi4.nix  scipi5.nix
k3s/: longhorn.yaml  traefik-config.yaml
nix/: darwin.nix  deploy.nix  home-manager.nix  make-btrfs-fs.nix  nixos.nix  sd.nix  shell.nix
nix/sd-utils/: sd-aarch64.nix  sd.nix
nixos/: borgbackup.nix  common.nix  configuration.nix  databases.nix  frigate.nix  homeassistant.nix  immich.nix  nix-cache.nix  openssh.nix  pihole.nix  rumqttd.nix  secrets.nix  secrets.yaml  tailscale.nix  users.nix  xray.nix
nixos/hardware/: ovh.nix
overlays/: pgvecto-rs.nix  rumqttd.nix  zigbee2mqtt.nix
overlays/filebot/: default.nix
sci/: configuration.nix  hardware-configuration.nix
scilo/: configuration.nix  filebot-license.patch  filebot.nix  hardware-configuration.nix  openethereum.nix  secrets.yaml
